crates/ink/tests/ui/abi/sol/fail/message-name-override-missing.stderr
error: expected a string literal value for `name` attribute argument
  --> tests/ui/abi/sol/fail/message-name-override-missing.rs:14:24
   |
14 |         #[ink(message, name)]
   |                        ^^^^
